# LHC-QANOMALY

./: .coverage  .gitignore  COMPLETION_REPORT.md  CONTRIBUTING.md  DELIVERY.md  Dockerfile  EXAMPLES.md  INDEX.md  MANIFEST.md  Makefile  PKG-INFO  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RESULTS.txt  SOURCES.txt  __init__.py  analyze_accuracy.py  api.py  autoencoder.pt  class_index.html  cli.py  config.py  data_loader.py  docker-compose.yml  entry_points.txt  function_index.html  index.html  infer_classical.py  model_classical.py  nodeids  optimize_threshold.py  pyproject.toml  requirements-dev.txt  requirements.txt  requires.txt  status.json  test_pipeline.py  tests.yml  top_level.txt  (+9 more)
